--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "monokai",
+  "name": "monokai-ubuntu",
   "theme": "syntax",
   "version": "0.7.0",
   "private": true,
-  "description": "A monokai theme",
-  "repository": "https://github.com/kevinsawicki/monokai",
+  "description": "A monokai theme for Ubuntu",
+  "repository": "https://github.com/fbrundu/monokai-ubuntu",
   "license": "MIT",
   "engines": {
     "atom": ">0.39.0"
